FIX(markdown): markdown table visible

--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -15,11 +15,11 @@
     }
 
     table {
-        @apply collapse border-neutral-200;
+        @apply border-2 border-neutral-200 border-collapse;
     }
 
     th, td {
-        @apply px-4 py-2 border-neutral-200 text-left;
+        @apply px-4 py-2 border-2 border-neutral-200 text-left;
     }
 
     ul {
@@ -49,6 +49,11 @@
             font-weight: 500;
             padding: 0 0 5px;
         }
+    }
+
+    img {
+        width: 100%;
+        height: auto;
     }
 
     img + em { /*이미지 캡션*/
